@@ -91,9 +91,6 @@ Table of contents:
 4. New functions to implement
 ##############################################################################
 
-- implement functions to save and restore all MPFR flags at once:
-  mpfr_flags_t mpfr_save_flags (void)
-  void mpfr_restore_flags (mpfr_flags_t)
 - implement mpfr_set_float128 and mpfr_get_float128 for the quadruple precision
   (non-standard) type __float128 of gcc, see
   http://gcc.gnu.org/onlinedocs/gcc/Floating-Types.html
